<resources>
    <string name="app_name">Цікаві тваринки</string>
    <string name="name_kapibara">Капібара</string>
    <string name="discription_kapibara">Живуть капібари по берегах озер і річок. Прекрасно плавають. Це найбільший гризун на нашій планеті.
Соціальна поведінка
Живуть групами по 10-20 особин. Група складається з домінуючого самця, кількох дорослих самок, дитинчат і підлеглих самців, які тримаються на периферії групи.
Розмноження
Вагітність триває близько 150 днів. Зазвичай самка народжує 4-6 дитинчат. Малюки народжуються покриті шерстю, з відкритими очима і зубами, що прорізалися. Вага новонароджених до 1,5 кг.
Вид і людина
Капібари ласкаві, легко приручаються і дресируються, тому деякі люди заводять їх у якості домашніх тварин.
Цікаві факти
Капібари «дружать» з птахами. Птахи очищають шерсть тварин, витягуючи з неї і поїдаючи комах. У свою чергу, птахи криками попереджають капібар про небезпеку, що наближається.
В давнину Америку населяли родичі капібар розміром з ведмедя і навіть носорога.</string>
    <string name="name_leleka">Лелека</string>
    <string name="discription_leleka">Середовище існування
Лелеки часто гніздяться по сусідству з людським житлом, обираючи для цього дахи будинків, труби печей, опори ліній електропередач або дерева, що ростуть поблизу споруд. Вони обирають для гнізд високі місця, звідки добре проглядається місцевість. Іноді можна помітити цілі колонії лелек числом до 20 гнізд. Селяться птахи, як правило, на околицях ставків, річок або заболочених лугів. На період гніздування та вигодовування пташенят білий лелека прилітає до Європи, а зимує в Південній Африці. У білих лелек два основних маршрути осінніх перельотів. Птахи, що мешкають у Західній Європі, летять через Гібралтар і далі вздовж західного узбережжя Африки на південь континенту. Східні лелеки летять над Босфором в Малу Азію, звідти – в Єгипет і над долиною Нілу в Південну Африку. Далеко не всі птахи відлітають зимувати на південь. Одні надто слабкі, у інших пошкоджені крила, і єдиний порятунок їм приносить зустріч із людиною. Люди нерідко рятують птахів із біди, приносячи їх у зоопарки або даючи прихисток у себе в господарстві. Лелеки легко приручаються і іноді до кінця життя залишаються у хазяїв.
    Спосіб життя
У другій половині березня лелеки прилітають до Європи, а в кінці серпня вирушають на південь, пролітаючи шлях довжиною близько 10 тис. км. Характерний ключ, що очолює досвідчений вожак, летить на великій висоті і за день долає від 50 до 270 км. Мисливські угіддя лелек розташовані на вологих луках, полях, по берегах річок, озер і ставків. Птах повільно пересувається луками, видивляючись здобич, і час від часу вміло підхоплює дзьобом жабу чи рибку. Їсть також ящірок, змій, слимаків, різноманітних комах, мишей, ховрахів та пташенят найрізноманітніших птахів. Часто можна побачити родини лелек, поважно ідучих по полю за трактором, де завжди повно червів та іншої дрібної поживи. Лелеки виражають свої емоції характерним клекотом та постукуванням дзьобів.
    Охорона
У минулому люди винищували лелек, вважаючи їх шкідниками і добуваючи із них цінний жир. У наш час сусідство з людьми залишається для лелек не менш тяжким. Застосування пестицидів і забруднення атмосфери отруйними продуктами спалення пластмаси та відходів електронної індустрії знижують природний приріст популяцій лелек у високорозвинених країнах і районах інтенсивного ведення сільського господарства. В Україні діє програма з охорони білого лелеки.</string>
    <string name="name_kin">Кінь</string>
    <string name="discription_kin">Один з найкрасивіших і граціозних тварин – це кінь. У нього гарна довга голова, гнучка шия, широкі груди, довгий тулуб, чотири високі тонкі ноги, на кожній з яких по одному твердому копиту. Тулуб тварини покритий густою, короткою, блискучою шерстю. Шия коня прикрашена густою гривою. На лобі є чубчик, а ззаду – довгий хвіст.

Коні бувають різної породи, забарвлення кожної яскраве і привабливе: чорні, руді, сірі, рябі.

Відрізняються тварини красивими, великими, довгастими очима. Їх погляд розумний і тямущий. Два вуха розташовані сторчма догори.

Задні ноги мають цікаву особливість в будові. На перший погляд, здається, що вони складаються, ніби з двох частин, а коліно прогинається назад. Але, насправді, в її ногах три частини; просто стегно має таке з’єднання з тулубом, що спочатку його не помітиш. Коліно – це кінська щиколотка, а копито – єдиний палець тварини з великим жорстким нігтем. Можна сказати, що кінь ходить на чотирьох пальцях.

Їдять коні сіно, траву, овес, сіль і хліб. Ці тварини витривалі і сильні. При цьому вони швидкі скакуни.

Коні корисні тварини для людей. Раніше вони часто використовувалися в господарстві для перевезення людей і вантажів.

Зараз коні — це друзі для дітей та дорослих, які навчаються верхової їзді. Вони дарують своїм господарям радість і хороший настрій.</string>
</resources>