<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <androidx.cardview.widget.CardView
        android:id="@+id/KapibaraCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageKapibara"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/kapibara" />

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textNameKapibara"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_kapibara" />

                <TextView
                    android:id="@+id/textDiscriptionKapibara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/discription_kapibara" />
            </LinearLayout>

            <Button
                android:id="@+id/button_kapibara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Детальніше" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/LelekaCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/KapibaraCard"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageleleka"
                app:srcCompat="@drawable/leleka"
                android:scaleType="centerCrop"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textNameLeleka"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_leleka"/>
                <TextView
                    android:id="@+id/textDiscriptionLeleka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discription_leleka"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:ellipsize="end"
                    android:maxLines="3"/>
            </LinearLayout>
            <Button
                android:id="@+id/button_leleka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Детальніше"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/KinCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LelekaCard"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageKin"
                app:srcCompat="@drawable/kin"
                android:scaleType="centerCrop"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textNameKin"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_kin"/>
                <TextView
                    android:id="@+id/textDiscriptionKin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discription_kin"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:ellipsize="end"
                    android:maxLines="3"/>
            </LinearLayout>
            <Button
                android:id="@+id/button_kin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Детальніше"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>



